<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrated">Calibrated</string>
    <string name="calibrating">Calibrating</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="expires">Expires</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="result">Result</string>
    <string name="warning">Warning</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>
    <string name="calibrationIsInvalid">Invalid calibration</string>
    <string name="tryRecalibrating">Try recalibrating</string>
    <string name="reagentExpiry">Reagent expiry</string>
    <string name="reagentBatch">Reagent batch</string>
    <string name="rgb_example_value">RGB (e.g. 255.255.255)</string>
    <string name="expired">Expired</string>
    <string name="dilution">Dilution</string>
    <string name="selectDilution">Select amount of dilution</string>
    <string name="noDilution">No Dilution</string>
    <string name="timesDilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="deviceConnecting">Connecting to Device</string>
    <string name="acceptResult">Accept Result</string>
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="calibratePoint">Calibrate %.0f μS/cm</string>
    <string name="calibrationSuccessful">Calibration Successful</string>
    <string name="sensorCalibrated">EC Sensor has been calibrated</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>
    <string name="waterQualitySystem">Water &amp; Soil Quality System</string>
    <string name="copyrightMessage">Copyright © Stichting Akvo</string>
    <string name="legalInformation">Legal Information</string>
    <string name="selectTest">Select Test</string>
    <string name="calibrationDetails">Calibration Details</string>
    <string name="customTests">Custom tests</string>
    <string name="deviceConnected">Device connected</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="saving">Saving</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="verifySensorDetails">Verify sensor details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>
    <string name="testWithDilution">Test with Dilution</string>
    <string name="brightness">Brightness</string>
    <string name="instructions">Instructions</string>
    <string name="shadows">Shadows</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting_for">Waiting for %s</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="prepareForCalibration">Prepare for calibration</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No result</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_quality">Checking light quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>
    <string name="noData">No data</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="storagePermission">Storage permission is required</string>
    <string name="cameraAndStoragePermissions">Camera &amp; storage permissions are required</string>
    <string name="incorrectDevice">Incorrect Device</string>
    <string name="expectedDeviceNotFound">The expected sensor was not found.</string>
    <string name="connectCorrectSensor"><Data><![CDATA[Connect the <b>%s</b> sensor.]]></Data></string>
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
    <string name="errorCalibrationIncomplete">Calibration for %1$s is incomplete</string>
    <string name="doYouWantToCalibrate">Do you want to calibrate now?</string>
    <string name="errorLoadingConfiguration">Could not load configuration information</string>
    <string name="calibrateWithNewReagent">Recalibrate with fresh reagent</string>
    <string name="placeDevice">Place device face down on a flat surface</string>
    <string name="errorTestInterrupted">Test was interrupted.</string>
    <string name="doNotMoveDeviceDuringTest">Do not move the phone during the test</string>
    <string name="errorTestFailed">Colour does not match any calibrated colours.</string>
    <string name="chamberNotFound">Could not complete test.</string>
    <string name="checkChamberPlacement">Check that the chamber has been placed correctly.</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>
    <string name="incorrectCalibrationCanAffect">Incorrect calibration can affect the proper functioning of the sensor</string>
    <string name="sensorNotFound">Sensor not found</string>
    <string name="cleanTheEcSensor">Clean the EC Sensor properly</string>
    <string name="getEcSolutionReady">Get ready the fluid with EC of %.0f μS/cm</string>
    <string name="dipEcSensorInSolution">Dip EC Sensor in the fluid and press Go</string>
    <string name="errorCalibrationExpired">Calibration is past its reagent expiry date</string>
    <string name="orderFreshBatch">Please order a fresh batch of reagent and recalibrate</string>
    <string name="highLevelRecommendation">Due to high level of contamination, it is recommended to test with dilution</string>
    <string name="error_calibrating">Calibration failed</string>
    <string name="error_cut_out_strip">No strip found</string>
    <string name="no_data">No data for patch</string>
    <string name="start_camera_instruction">Place strip in black area of the colour card &amp; hold camera above it to analyse.</string>
    <string name="prepare_camera_instruction">Don\'t take sample yet. Hold camera above colour card and adjust position until check succeeds.</string>
    <string name="you_can_set_phone_aside">You can set the phone aside until the countdown progress reaches green.</string>
    <string name="prepareSolutionsForCalibration">Prepare 6 solutions with these EC values</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera required.</string>
    <string name="qualityCheckFailed">Quality check failed</string>
    <string name="tryTestingInAWellLitArea">Place the colour card in an area with good light and no shadows and try again.</string>
    <string name="shadows_detected">Shadows/reflections detected</string>
    <string name="better_light_required">Better light required</string>
    <string name="color_card_not_found">Colour card not found</string>
    <string name="correctThePhoneTilt">Hold the phone level with colour card</string>
    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected to photometer</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown</string>
    <string name="turnOnMd610">Switch on MD610 bluetooth</string>
    <string name="press_on_button"><![CDATA[Press [*on*]]]></string>
    <string name="press_mode_button"><![CDATA[Press [*mode*] to enter menu.]]></string>
    <string name="select_bluetooth"><![CDATA[Press [*down*] to scroll to Bluetooth and press [*enter*]]]></string>
    <string name="turn_bluetooth_on"><![CDATA[Press [*shift*] + [*1*] to turn bluetooth on.]]></string>
    <string name="escape_to_menu"><![CDATA[Press [*enter*] and [*esc*] to return to main menu.]]></string>
    <string name="perform_test"><![CDATA[Perform <b>%1$s</b> test on MD610 and press [*f3*] when ready.]]></string>
    <string name="select_correct_test"><![CDATA[Select the correct test and try again.]]></string>
    <string name="data_does_not_match">Received data does not match the expected test type.</string>
    <string name="incorrect_test_selected">Incorrect test selected</string>
    <string name="select_test"><![CDATA[Select <b>%1$s</b> test on MD610]]></string>
    <string name="test_selected">Test Selected</string>
    <string name="to_select_test">Selecting the test</string>
    <string name="test_instructions">Test Instructions</string>
    <string name="select_test_instruction">Press [*shift*] + <b>%1$s</b> to select <b>%2$s</b> test and then press [*enter*]</string>
    <string name="select_diff_test_instruction">Press [*shift*] + <b>%1$s</b> to select <b>%2$s</b> test. Select <b>\'diff\'</b> and then press [*enter*]</string>
    <string name="select_free_test_instruction">Press [*shift*] + <b>%1$s</b> to select <b>%2$s</b> test. Select <b>\'free\'</b> and then press [*enter*]</string>
    <string name="select_Cr_VI_test_instruction">Press [*shift*] + <b>%1$s</b> to select <b>%2$s</b> test. Select <b>\'Cr(VI)\'</b> and then press [*enter*]</string>
    <string name="select_Cr_III_VI_test_instruction">Press [*shift*] + <b>%1$s</b> to select <b>%2$s</b> test. Select <b>\'Cr(III+VI)\'</b> and then press [*enter*]</string>
</resources>