<!--
  ~  Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~  This file is part of Akvo Caddisfly
  ~
  ~  Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~  the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~  either version 3 of the License or any later version.
  ~
  ~  Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~  See the GNU Affero General Public License included below for more details.
  ~
  ~  The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sensor.colorimetry.liquid.CalibrateListActivity">
    <item
        android:id="@+id/menu_save"
        android:enabled="true"
        android:icon="@drawable/ic_action_save_dark"
        android:orderInCategory="0"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_load"
        android:enabled="true"
        android:icon="@drawable/ic_action_load_dark"
        android:orderInCategory="0"
        android:title="@string/load"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_swatches"
        android:icon="@drawable/ic_menu_swatch_dark"
        android:orderInCategory="100"
        android:title="@string/swatches"
        app:showAsAction="always" />
</menu>
