<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:minWidth="400dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Electrical Conductivity" />

    <TextView
        android:id="@+id/textDilution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@color/amber"
        android:gravity="center"
        android:padding="7dp"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="@string/timesDilution" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:gravity="center_vertical"
        android:textSize="80sp"
        tools:text="15000" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:textColor="#333"
        android:textSize="20sp"
        tools:text="ppm" />

    <Button
        android:id="@+id/buttonOk"
        style="@style/Button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="Accept Result"
        android:theme="?primaryButtonStyle" />

    <LinearLayout
        android:id="@+id/dilutionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/amber"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="21sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="@string/highContamination" />

        <TextView
            android:id="@+id/textMessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/highLevelsFound" />

        <TextView
            android:id="@+id/textMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            tools:text="@string/tryWithDilutedSample" />

        <Button
            android:id="@+id/button"
            style="@style/Button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="Test with Dilution"
            android:theme="?primaryButtonStyle" />
    </LinearLayout>
</LinearLayout>
