<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.akvo.caddisfly.viewmodel.TestInfoViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp"
            app:background="@{vm.test.name}"
            tools:background="?colorPrimary">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@{vm.test.name}"
                android:textColor="#fff"
                android:textSize="30sp"
                tools:text="Contaminant" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:paddingBottom="20dp"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/noDilution" />

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeDevice"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layoutWait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageIllustration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/place_device"
                android:visibility="@{vm.test.cameraAbove ? View.GONE : View.VISIBLE}" />

            <FrameLayout
                android:id="@+id/camera_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:visibility="@{vm.test.cameraAbove ? View.VISIBLE : View.GONE}" />

            <org.akvo.caddisfly.widget.CircleView
                android:id="@+id/circleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.test.cameraAbove ? View.VISIBLE : View.GONE}" />

            <Button
                android:id="@+id/startCaptureButton"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:enabled="true"
                android:minWidth="230dp"
                android:onClick="onStartTestClick"
                android:text="@string/start"
                android:theme="?primaryButtonStyle"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>
</layout>